--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,13 @@
 services: mongodb
+matrix:
+  include:
+    - os: linux
+      dist: trusty
+      sudo: false
+      language: python
+      python: 3.5
+      env:
+        - DISPLAY=:99.0
+        - LIBOVERLAY_SCROLLBAR=0
+    - os: osx
+      language: generic
